// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GorgiasChatIntegrationInstall/> should display a list of Shopify store if the chat as multiple shopify_integration_ids 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/channels/gorgias_chat"
          >
            Chat
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          mychat
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      class="link"
      data-active-class-name="active"
      href="/app/settings/channels/gorgias_chat/2/campaigns"
    >
      Campaigns
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/2/quick_replies"
    >
      Quick replies
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/2/appearance"
    >
      Appearance
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/2/preferences"
    >
      Preferences
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/2/installation"
    >
      Installation
    </a>
  </nav>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="pageColumn col-md-8"
      >
        <div
          class="card card"
        >
          <div
            class="card-header card-header"
          >
            <h3>
              One-click installation
            </h3>
          </div>
          <div
            class="card-body card-body"
          >
            <p>
              Activate the customer chat widget on your Shopify store in one click.
            </p>
            <div
              class="one-click-installation"
            >
              <div
                class="one-click-installation-inner"
              >
                <img
                  alt="shopify-logo"
                  class="shopify-logo"
                  src="test-file-stub"
                />
                <b />
                <img
                  alt="warning icon"
                  class="warning-icon"
                  id="deactivated-integration-undefined"
                  src="test-file-stub"
                />
                <span
                  class="disconnected-store"
                >
                  Disconnected store
                </span>
              </div>
              <div
                class="actions-wrapper"
              >
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Install
                </button>
                <button
                  class="wrapper disconnect-button fill destructive medium"
                  id="disconnect-button-undefined"
                  type="button"
                >
                  <i
                    class="material-icons"
                  >
                    delete
                  </i>
                </button>
              </div>
            </div>
            <div
              class="one-click-installation"
            >
              <div
                class="one-click-installation-inner"
              >
                <img
                  alt="shopify-logo"
                  class="shopify-logo"
                  src="test-file-stub"
                />
                <b>
                  mylittleintegration2
                </b>
                <img
                  alt="warning icon"
                  class="warning-icon"
                  id="legacy-installation-2"
                  src="test-file-stub"
                />
              </div>
              <div
                class="actions-wrapper"
              >
                <button
                  class="btn btn-secondary"
                  type="button"
                >
                  Uninstall
                </button>
                <button
                  class="wrapper disconnect-button fill destructive medium"
                  id="disconnect-button-2"
                  type="button"
                >
                  <i
                    class="material-icons"
                  >
                    delete
                  </i>
                </button>
              </div>
            </div>
            <div
              class="one-click-installation"
            >
              <div
                class="one-click-installation-inner"
              >
                <img
                  alt="shopify-logo"
                  class="shopify-logo"
                  src="test-file-stub"
                />
                <b>
                  mylittleintegration3
                </b>
                <img
                  alt="warning icon"
                  class="warning-icon"
                  id="legacy-installation-3"
                  src="test-file-stub"
                />
              </div>
              <div
                class="actions-wrapper"
              >
                <button
                  class="btn btn-secondary"
                  type="button"
                >
                  Uninstall
                </button>
                <button
                  class="wrapper disconnect-button fill destructive medium"
                  id="disconnect-button-3"
                  type="button"
                >
                  <i
                    class="material-icons"
                  >
                    delete
                  </i>
                </button>
              </div>
            </div>
            <div
              class="one-click-installation"
            >
              <div
                class="one-click-installation-inner"
              >
                <img
                  alt="shopify-logo"
                  class="shopify-logo"
                  src="test-file-stub"
                />
                <b>
                  mylittleintegration
                </b>
                <img
                  alt="warning icon"
                  class="warning-icon"
                  id="legacy-installation-1"
                  src="test-file-stub"
                />
              </div>
              <div
                class="actions-wrapper"
              >
                <button
                  class="btn btn-secondary"
                  type="button"
                >
                  Uninstall
                </button>
                <button
                  class="wrapper disconnect-button fill destructive medium"
                  id="disconnect-button-1"
                  type="button"
                >
                  <i
                    class="material-icons"
                  >
                    delete
                  </i>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card card"
        >
          <div
            class="card-header card-header"
          >
            <h3>
              Custom installation
            </h3>
            <button
              aria-label="expand card"
            >
              <i
                class="material-icons"
              >
                keyboard_arrow_down
              </i>
            </button>
          </div>
          <div
            class="collapse"
          >
            <div
              class="card-body card-body"
            >
              <p>
                If you're not using Shopify or wish to add the chat widget manually only to specific Shopify webpages, follow the instructions below. For more details,
                 
                <a
                  href="https://docs.gorgias.com/gorgias-chat/chat-getting-started"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  see this article
                </a>
                .
              </p>
              <h4>
                Install chat widget
              </h4>
              <ul
                class="tab-bar nav nav-tabs"
              >
                <li
                  class="tab-item nav-item"
                >
                  <a
                    class="activeTab tabLink nav-link"
                    href="#"
                  >
                    Shopify website
                  </a>
                </li>
                <li
                  class="tab-item nav-item"
                >
                  <a
                    class="tabLink nav-link"
                    href="#"
                  >
                    Any other website
                  </a>
                </li>
                <li
                  class="tab-item nav-item"
                >
                  <a
                    class="tabLink nav-link"
                    href="#"
                  >
                    Google Tag Manager
                  </a>
                </li>
              </ul>
              <div
                class="tab-content"
              >
                <div
                  class="tab-pane active"
                >
                  <div
                    class="wrapper"
                  >
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          1
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Go under 
                        <b>
                          Themes
                        </b>
                         in your Online Store and click on
                         
                        <b>
                          Customize
                        </b>
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          2
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Then under 
                        <b>
                          Theme actions
                        </b>
                        , click on 
                        <b>
                          Edit Code
                        </b>
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          3
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Open file 
                        <b>
                          theme.liquid
                        </b>
                         and scroll down to the bottom
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          4
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Finally, copy the code below and paste it above the
                         
                        <b>
                          &lt;/body&gt;
                        </b>
                         tag
                      </div>
                    </div>
                    <div
                      class="alert warning"
                    >
                      <div
                        class="content"
                      >
                        <span
                          class="label"
                        >
                          Please note that by copying the code to your Shopify
                           
                          <b>
                            theme.liquid
                          </b>
                           files, the chat will also be shown on all webpages. Make sure to copy the code to just specific pages if needed.
                        </span>
                      </div>
                    </div>
                    <div
                      class="container"
                    >
                      <div
                        class="wrapper alert alert-success fade"
                        role="alert"
                      >
                        <pre
                          class="code"
                          id="code-snippet-4"
                        >
                          &lt;!--Gorgias Chat Widget Start--&gt;&lt;script id="gorgias-chat-widget-install-v2" src="https:///gorgias-chat-bundle-loader.js?applicationId=undefined"&gt;&lt;/script&gt;&lt;!--Gorgias Chat Widget End--&gt;
                        </pre>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="tab-pane"
                >
                  <div
                    class="wrapper"
                  >
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          1
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Edit the source code of your website which contains the closing HTML tag 
                        <b>
                          &lt;/body&gt;
                        </b>
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          2
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Just above this tag, copy and paste the code snippet below
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          3
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Save the file and commit the changes
                      </div>
                    </div>
                    <div
                      class="alert warning"
                    >
                      <div
                        class="content"
                      >
                        <span
                          class="label"
                        >
                          Please note that by inserting this snippet on your webpage, it will load the chat on that specific webpage only. Make sure to insert the snippet on all the pages for which you wish to display the chat widget.
                        </span>
                      </div>
                    </div>
                    <div
                      class="container"
                    >
                      <div
                        class="wrapper alert alert-success fade"
                        role="alert"
                      >
                        <pre
                          class="code"
                          id="code-snippet-5"
                        >
                          &lt;!--Gorgias Chat Widget Start--&gt;&lt;script id="gorgias-chat-widget-install-v2" src="https:///gorgias-chat-bundle-loader.js?applicationId=undefined"&gt;&lt;/script&gt;&lt;!--Gorgias Chat Widget End--&gt;
                        </pre>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="tab-pane"
                >
                  <div
                    class="wrapper"
                  >
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          1
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        In Google Tag Manager, click "Tags" in the menu.
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          2
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        <b>
                          Click "New" to create a new tag.
                        </b>
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          3
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Search for "Gorgias Chat" and select it.
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          4
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        <b>
                          Enter your
                        </b>
                         Gorgias Chat App ID : 
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          5
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Select "All Pages - Page view" in the Trigger section.
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          6
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Save and publish.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="installationOptions"
        >
          <div
            class="formGroup d-flex"
          >
            <div>
              <label
                aria-label="Hide chat"
                class="label label"
                for="toggle-button-6"
                role="switch"
              >
                <input
                  aria-label="Hide chat"
                  class="input"
                  disabled=""
                  id="toggle-button-6"
                  name="toggle-button-6"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
              </label>
            </div>
            <div
              class="ml-2"
            >
              <b>
                Hide Chat
              </b>
               
              <i
                class="material-icons-outlined"
                id="hide-chat-help"
              >
                error_outline
              </i>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GorgiasChatIntegrationInstall/> should display the Custom installation block if shop_name & shop_type are not set and there is no shopify_integration_ids 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/channels/gorgias_chat"
          >
            Chat
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          mychat
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      class="link"
      data-active-class-name="active"
      href="/app/settings/channels/gorgias_chat/2/campaigns"
    >
      Campaigns
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/2/quick_replies"
    >
      Quick replies
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/2/appearance"
    >
      Appearance
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/2/preferences"
    >
      Preferences
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/2/installation"
    >
      Installation
    </a>
  </nav>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="pageColumn col-md-8"
      >
        <div
          class="card card"
        >
          <div
            class="card-body card-body"
          >
            <div>
              <h3>
                Connect to store
              </h3>
              <p>
                By connecting your live chat to an online store, you can leverage all the store's information for automation such as self-service flows and help articles.
              </p>
            </div>
            <div
              class="connect-button-wrapper"
            >
              <button
                class="btn btn-primary"
                type="button"
              >
                Connect
              </button>
            </div>
          </div>
        </div>
        <div
          class="card card"
        >
          <div
            class="card-header card-header"
          >
            <h3>
              Custom installation
            </h3>
            <button
              aria-label="collapse card"
            >
              <i
                class="material-icons"
              >
                keyboard_arrow_up
              </i>
            </button>
          </div>
          <div
            class="collapse show"
          >
            <div
              class="card-body card-body"
            >
              <p>
                If you're not using Shopify or wish to add the chat widget manually only to specific Shopify webpages, follow the instructions below. For more details,
                 
                <a
                  href="https://docs.gorgias.com/gorgias-chat/chat-getting-started"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  see this article
                </a>
                .
              </p>
              <h4>
                Install chat widget
              </h4>
              <ul
                class="tab-bar nav nav-tabs"
              >
                <li
                  class="tab-item nav-item"
                >
                  <a
                    class="activeTab tabLink nav-link"
                    href="#"
                  >
                    Any other website
                  </a>
                </li>
                <li
                  class="tab-item nav-item"
                >
                  <a
                    class="tabLink nav-link"
                    href="#"
                  >
                    Google Tag Manager
                  </a>
                </li>
              </ul>
              <div
                class="tab-content"
              >
                <div
                  class="tab-pane active"
                >
                  <div
                    class="wrapper"
                  >
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          1
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Edit the source code of your website which contains the closing HTML tag 
                        <b>
                          &lt;/body&gt;
                        </b>
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          2
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Just above this tag, copy and paste the code snippet below
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          3
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Save the file and commit the changes
                      </div>
                    </div>
                    <div
                      class="alert warning"
                    >
                      <div
                        class="content"
                      >
                        <span
                          class="label"
                        >
                          Please note that by inserting this snippet on your webpage, it will load the chat on that specific webpage only. Make sure to insert the snippet on all the pages for which you wish to display the chat widget.
                        </span>
                      </div>
                    </div>
                    <div
                      class="container"
                    >
                      <div
                        class="wrapper alert alert-success fade"
                        role="alert"
                      >
                        <pre
                          class="code"
                          id="code-snippet-7"
                        >
                          &lt;!--Gorgias Chat Widget Start--&gt;&lt;script id="gorgias-chat-widget-install-v2" src="https:///gorgias-chat-bundle-loader.js?applicationId=undefined"&gt;&lt;/script&gt;&lt;!--Gorgias Chat Widget End--&gt;
                        </pre>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="tab-pane"
                >
                  <div
                    class="wrapper"
                  >
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          1
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        In Google Tag Manager, click "Tags" in the menu.
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          2
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        <b>
                          Click "New" to create a new tag.
                        </b>
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          3
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Search for "Gorgias Chat" and select it.
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          4
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        <b>
                          Enter your
                        </b>
                         Gorgias Chat App ID : 
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          5
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Select "All Pages - Page view" in the Trigger section.
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          6
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Save and publish.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="installationOptions"
        >
          <div
            class="formGroup d-flex"
          >
            <div>
              <label
                aria-label="Hide chat"
                class="label label"
                for="toggle-button-8"
                role="switch"
              >
                <input
                  aria-label="Hide chat"
                  class="input"
                  disabled=""
                  id="toggle-button-8"
                  name="toggle-button-8"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
              </label>
            </div>
            <div
              class="ml-2"
            >
              <b>
                Hide Chat
              </b>
               
              <i
                class="material-icons-outlined"
                id="hide-chat-help"
              >
                error_outline
              </i>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GorgiasChatIntegrationInstall/> should display the associated Shopify store when shop_name and shop_type are defined and installed in shopify_integration_ids 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/channels/gorgias_chat"
          >
            Chat
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          mychat
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      class="link"
      data-active-class-name="active"
      href="/app/settings/channels/gorgias_chat/2/campaigns"
    >
      Campaigns
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/2/quick_replies"
    >
      Quick replies
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/2/appearance"
    >
      Appearance
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/2/preferences"
    >
      Preferences
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/2/automation"
    >
      Automation
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/2/installation"
    >
      Installation
    </a>
  </nav>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="pageColumn col-md-8"
      >
        <div
          class="card card"
        >
          <div
            class="card-header card-header"
          >
            <h3>
              One-click installation
            </h3>
          </div>
          <div
            class="card-body card-body"
          >
            <p>
              Activate the customer chat widget on your Shopify store in one click.
            </p>
            <div
              class="one-click-installation"
            >
              <div
                class="one-click-installation-inner"
              >
                <img
                  alt="shopify-logo"
                  class="shopify-logo"
                  src="test-file-stub"
                />
                <b>
                  mylittleintegration3
                </b>
              </div>
              <div
                class="actions-wrapper"
              >
                <button
                  class="btn btn-secondary"
                  type="button"
                >
                  Uninstall
                </button>
                <button
                  class="wrapper disconnect-button fill destructive medium"
                  id="disconnect-button-3"
                  type="button"
                >
                  <i
                    class="material-icons"
                  >
                    delete
                  </i>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card card"
        >
          <div
            class="card-header card-header"
          >
            <h3>
              Custom installation
            </h3>
            <button
              aria-label="expand card"
            >
              <i
                class="material-icons"
              >
                keyboard_arrow_down
              </i>
            </button>
          </div>
          <div
            class="collapse"
          >
            <div
              class="card-body card-body"
            >
              <p>
                If you're not using Shopify or wish to add the chat widget manually only to specific Shopify webpages, follow the instructions below. For more details,
                 
                <a
                  href="https://docs.gorgias.com/gorgias-chat/chat-getting-started"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  see this article
                </a>
                .
              </p>
              <h4>
                Install chat widget
              </h4>
              <ul
                class="tab-bar nav nav-tabs"
              >
                <li
                  class="tab-item nav-item"
                >
                  <a
                    class="activeTab tabLink nav-link"
                    href="#"
                  >
                    Shopify website
                  </a>
                </li>
                <li
                  class="tab-item nav-item"
                >
                  <a
                    class="tabLink nav-link"
                    href="#"
                  >
                    Any other website
                  </a>
                </li>
                <li
                  class="tab-item nav-item"
                >
                  <a
                    class="tabLink nav-link"
                    href="#"
                  >
                    Google Tag Manager
                  </a>
                </li>
              </ul>
              <div
                class="tab-content"
              >
                <div
                  class="tab-pane active"
                >
                  <div
                    class="wrapper"
                  >
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          1
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Go under 
                        <b>
                          Themes
                        </b>
                         in your Online Store and click on
                         
                        <b>
                          Customize
                        </b>
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          2
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Then under 
                        <b>
                          Theme actions
                        </b>
                        , click on 
                        <b>
                          Edit Code
                        </b>
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          3
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Open file 
                        <b>
                          theme.liquid
                        </b>
                         and scroll down to the bottom
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          4
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Finally, copy the code below and paste it above the
                         
                        <b>
                          &lt;/body&gt;
                        </b>
                         tag
                      </div>
                    </div>
                    <div
                      class="alert warning"
                    >
                      <div
                        class="content"
                      >
                        <span
                          class="label"
                        >
                          Please note that by copying the code to your Shopify
                           
                          <b>
                            theme.liquid
                          </b>
                           files, the chat will also be shown on all webpages. Make sure to copy the code to just specific pages if needed.
                        </span>
                      </div>
                    </div>
                    <div
                      class="container"
                    >
                      <div
                        class="wrapper alert alert-success fade"
                        role="alert"
                      >
                        <pre
                          class="code"
                          id="code-snippet-1"
                        >
                          &lt;!--Gorgias Chat Widget Start--&gt;&lt;script id="gorgias-chat-widget-install-v2" src="https:///gorgias-chat-bundle-loader.js?applicationId=undefined"&gt;&lt;/script&gt;&lt;!--Gorgias Chat Widget End--&gt;
                        </pre>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="tab-pane"
                >
                  <div
                    class="wrapper"
                  >
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          1
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Edit the source code of your website which contains the closing HTML tag 
                        <b>
                          &lt;/body&gt;
                        </b>
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          2
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Just above this tag, copy and paste the code snippet below
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          3
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Save the file and commit the changes
                      </div>
                    </div>
                    <div
                      class="alert warning"
                    >
                      <div
                        class="content"
                      >
                        <span
                          class="label"
                        >
                          Please note that by inserting this snippet on your webpage, it will load the chat on that specific webpage only. Make sure to insert the snippet on all the pages for which you wish to display the chat widget.
                        </span>
                      </div>
                    </div>
                    <div
                      class="container"
                    >
                      <div
                        class="wrapper alert alert-success fade"
                        role="alert"
                      >
                        <pre
                          class="code"
                          id="code-snippet-2"
                        >
                          &lt;!--Gorgias Chat Widget Start--&gt;&lt;script id="gorgias-chat-widget-install-v2" src="https:///gorgias-chat-bundle-loader.js?applicationId=undefined"&gt;&lt;/script&gt;&lt;!--Gorgias Chat Widget End--&gt;
                        </pre>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="tab-pane"
                >
                  <div
                    class="wrapper"
                  >
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          1
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        In Google Tag Manager, click "Tags" in the menu.
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          2
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        <b>
                          Click "New" to create a new tag.
                        </b>
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          3
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Search for "Gorgias Chat" and select it.
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          4
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        <b>
                          Enter your
                        </b>
                         Gorgias Chat App ID : 
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          5
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Select "All Pages - Page view" in the Trigger section.
                      </div>
                    </div>
                    <div
                      class="instruction"
                    >
                      <div>
                        <span
                          class="instruction-number"
                        >
                          6
                        </span>
                      </div>
                      <div
                        class="instruction-text"
                      >
                        Save and publish.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="installationOptions"
        >
          <div
            class="formGroup d-flex"
          >
            <div>
              <label
                aria-label="Hide chat"
                class="label label"
                for="toggle-button-3"
                role="switch"
              >
                <input
                  aria-label="Hide chat"
                  class="input"
                  disabled=""
                  id="toggle-button-3"
                  name="toggle-button-3"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
              </label>
            </div>
            <div
              class="ml-2"
            >
              <b>
                Hide Chat
              </b>
               
              <i
                class="material-icons-outlined"
                id="hide-chat-help"
              >
                error_outline
              </i>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderChatCodeSnippet() should render correctly with new format 1`] = `"<!--Gorgias Chat Widget Start--><script id="gorgias-chat-widget-install-v2" src="https:///gorgias-chat-bundle-loader.js?applicationId=undefined"></script><!--Gorgias Chat Widget End-->"`;
